<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="substractF"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#39BECA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.98">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#FF8502"
                android:onClick="clearF"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parantheses"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parF"
                android:text="@string/parantheses"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponent"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="expF"
                android:text="@string/exponent"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideF"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenF"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightF"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineF"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyF"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourF"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveF"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixF"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/add"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addF"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneF"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoF"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeF"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/substacle"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="substractF"
                android:text="@string/substract"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusF"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroF"
                android:text="@string/Zero"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/point"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="60dp"

                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="decimalF"
                android:text="@string/points"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equal"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"

                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#31E444"
                android:onClick="equalF"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:hint="Enter in a value"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


    <ImageButton
        android:id="@+id/deleteId"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="wrap_content"
        android:layout_height="60dp
"

        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:onClick="backF"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/deleteicon" />
</androidx.constraintlayout.widget.ConstraintLayout>